--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,7 @@
     </div>
 
     <script src="./firebase-config.js"></script>
+    <script src="./config.js"></script>
 
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
@@ -117,10 +118,15 @@
 
       // 🔹 Google OAuth Popup
       const loginButton = document.getElementById("google-login-button");
+      const apiConfig = window.__api_config;
+      
       loginButton.addEventListener("click", () => {
-        const popup = window.open("http://localhost:4000/auth/google", "Login", "width=500,height=600");
+        const authUrl = `${apiConfig.baseURL}/auth/google`;
+        const popup = window.open(authUrl, "Login", "width=500,height=600");
+        
         window.addEventListener("message", async (event) => {
-          if ((event.origin === "http://localhost:4000" || event.origin === "http://localhost:5173") && event.data && event.data.token) {
+          // Check if origin is allowed
+          if (apiConfig.allowedOrigins.some(origin => event.origin.startsWith(origin)) && event.data && event.data.token) {
             try {
               await signInWithCustomToken(auth, event.data.token);
               popup.close();
